--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,7 @@
 development:
   adapter: mysql
   encoding: utf8
-  database: gsg_development
+  database: gscript_development
   username: root
   password:
 
