--- a/lib/db/items.yml
+++ b/lib/db/items.yml
@@ -15,6 +15,13 @@ power:
   actor: all
   name: 戦力
 
+power-over-write-japan:
+  type: int
+  actor: japan
+  iname: power
+  name: 戦力
+  default: 100000
+
 population:
   type: int
   actor: all
